--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
 	implementation ('org.springframework.boot:spring-boot-starter-web')
 	implementation('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.0.3')
 	implementation('javax.validation:validation-api:2.0.1.Final')
+	implementation('org.flywaydb:flyway-core:7.9.1')
 
 	runtimeOnly('org.postgresql:postgresql:42.2.20')
 	testImplementation ('org.springframework.boot:spring-boot-starter-test')
